--- a/LightGBM_gridsearchCV.ipynb
+++ b/LightGBM_gridsearchCV.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:04.229003Z",
-     "start_time": "2020-03-23T20:22:03.494926Z"
+     "end_time": "2020-03-24T18:01:04.503056Z",
+     "start_time": "2020-03-24T18:01:03.504061Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:05.075767Z",
-     "start_time": "2020-03-23T20:22:05.059088Z"
+     "end_time": "2020-03-24T18:01:05.760382Z",
+     "start_time": "2020-03-24T18:01:05.742893Z"
     }
    },
    "outputs": [],
@@ -60,8 +60,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:05.486103Z",
-     "start_time": "2020-03-23T20:22:05.481139Z"
+     "end_time": "2020-03-24T18:01:06.874691Z",
+     "start_time": "2020-03-24T18:01:06.869674Z"
     }
    },
    "outputs": [],
@@ -74,8 +74,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:06.169121Z",
-     "start_time": "2020-03-23T20:22:06.163270Z"
+     "end_time": "2020-03-24T18:01:07.974815Z",
+     "start_time": "2020-03-24T18:01:07.968557Z"
     }
    },
    "outputs": [],
@@ -105,8 +105,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:06.690322Z",
-     "start_time": "2020-03-23T20:22:06.678744Z"
+     "end_time": "2020-03-24T18:01:09.344555Z",
+     "start_time": "2020-03-24T18:01:09.338962Z"
     }
    },
    "outputs": [],
@@ -128,25 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:07.667317Z",
-     "start_time": "2020-03-23T20:22:07.634507Z"
+     "end_time": "2020-03-24T18:01:30.771375Z",
+     "start_time": "2020-03-24T18:01:30.764228Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['boosting_type', 'class_weight', 'colsample_bytree', 'importance_type', 'learning_rate', 'max_depth', 'min_child_samples', 'min_child_weight', 'min_split_gain', 'n_estimators', 'n_jobs', 'num_leaves', 'objective', 'random_state', 'reg_alpha', 'reg_lambda', 'silent', 'subsample', 'subsample_for_bin', 'subsample_freq', 'max_bin', 'scale_pos_weight'])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = ltb.LGBMClassifier(boosting_type= 'gbdt',\n",
     "          objective = 'binary',\n",
@@ -160,10 +149,7 @@
     "          min_split_gain = params['min_split_gain'],\n",
     "          min_child_weight = params['min_child_weight'],\n",
     "          min_child_samples = params['min_child_samples'],\n",
-    "          scale_pos_weight = params['scale_pos_weight'])\n",
-    "\n",
-    "# To view the default model params:\n",
-    "model.get_params().keys()"
+    "          scale_pos_weight = params['scale_pos_weight'])"
    ]
   },
   {
@@ -171,9 +157,10 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:41.246183Z",
-     "start_time": "2020-03-23T20:22:37.595836Z"
-    }
+     "end_time": "2020-03-24T18:01:35.727927Z",
+     "start_time": "2020-03-24T18:01:31.736592Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -218,11 +205,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:45.474165Z",
-     "start_time": "2020-03-23T20:22:45.469775Z"
+     "end_time": "2020-03-24T18:07:30.418078Z",
+     "start_time": "2020-03-24T18:07:30.412104Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LGBMClassifier(boosting_type='gbdt', class_weight=None, colsample_bytree=0.65,\n",
+       "               importance_type='split', learning_rate=0.005, max_bin=512,\n",
+       "               max_depth=-1, min_child_samples=5, min_child_weight=1,\n",
+       "               min_split_gain=0.5, n_estimators=40, n_jobs=3, num_leaves=6,\n",
+       "               objective='binary', random_state=501, reg_alpha=1, reg_lambda=1,\n",
+       "               scale_pos_weight=1, silent=True, subsample=0.7,\n",
+       "               subsample_for_bin=200, subsample_freq=1)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-24T18:18:01.890276Z",
+     "start_time": "2020-03-24T18:18:01.885186Z"
     }
    },
    "outputs": [
@@ -232,14 +250,14 @@
      "text": [
       "{'boosting_type': 'gbdt', 'colsample_bytree': 0.65, 'learning_rate': 0.005, 'n_estimators': 40, 'num_leaves': 6, 'objective': 'binary', 'random_state': 501, 'reg_alpha': 1, 'reg_lambda': 1, 'subsample': 0.7}\n",
       "\n",
-      "0.6267633574325515\n"
+      "0.6502380532533945\n"
      ]
     }
    ],
    "source": [
     "print(grid.best_params_)\n",
     "print()\n",
-    "print(grid.best_score_)"
+    "print(grid.best_score_) # what it means?"
    ]
   },
   {
@@ -247,8 +265,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:48.838769Z",
-     "start_time": "2020-03-23T20:22:48.832404Z"
+     "end_time": "2020-03-24T18:01:39.713727Z",
+     "start_time": "2020-03-24T18:01:39.706876Z"
     },
     "scrolled": true
    },
@@ -280,40 +298,63 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T20:22:51.372733Z",
-     "start_time": "2020-03-23T20:22:51.345463Z"
+     "end_time": "2020-03-24T18:01:46.112427Z",
+     "start_time": "2020-03-24T18:01:46.106647Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Unknown type of parameter:boosting_type, got:dict",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-19d67ba0b2ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mltb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLGBMClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/lightgbm/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, init_score, eval_set, eval_names, eval_sample_weight, eval_class_weight, eval_init_score, eval_metric, early_stopping_rounds, verbose, feature_name, categorical_feature, callbacks)\u001b[0m\n\u001b[1;32m    803\u001b[0m                                         \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeature_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    804\u001b[0m                                         \u001b[0mcategorical_feature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcategorical_feature\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 805\u001b[0;31m                                         callbacks=callbacks)\n\u001b[0m\u001b[1;32m    806\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    807\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/lightgbm/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, init_score, group, eval_set, eval_names, eval_sample_weight, eval_class_weight, eval_init_score, eval_group, eval_metric, early_stopping_rounds, verbose, feature_name, categorical_feature, callbacks)\u001b[0m\n\u001b[1;32m    598\u001b[0m                               \u001b[0mverbose_eval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeature_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    599\u001b[0m                               \u001b[0mcategorical_feature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcategorical_feature\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 600\u001b[0;31m                               callbacks=callbacks)\n\u001b[0m\u001b[1;32m    601\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    602\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevals_result\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/lightgbm/engine.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(params, train_set, num_boost_round, valid_sets, valid_names, fobj, feval, init_model, feature_name, categorical_feature, early_stopping_rounds, evals_result, verbose_eval, learning_rates, keep_training_booster, callbacks)\u001b[0m\n\u001b[1;32m    226\u001b[0m     \u001b[0;31m# construct booster\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 228\u001b[0;31m         \u001b[0mbooster\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBooster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_set\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_set\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    229\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_valid_contain_train\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m             \u001b[0mbooster\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_train_data_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/lightgbm/basic.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, params, train_set, model_file, model_str, silent)\u001b[0m\n\u001b[1;32m   1692\u001b[0m                 raise TypeError('Training data should be Dataset instance, met {}'\n\u001b[1;32m   1693\u001b[0m                                 .format(type(train_set).__name__))\n\u001b[0;32m-> 1694\u001b[0;31m             \u001b[0mparams_str\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparam_dict_to_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1695\u001b[0m             \u001b[0;31m# set network if necessary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1696\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0malias\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m_ConfigAliases\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"machines\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/lightgbm/basic.py\u001b[0m in \u001b[0;36mparam_dict_to_str\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    139\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m             raise TypeError('Unknown type of parameter:%s, got:%s'\n\u001b[0;32m--> 141\u001b[0;31m                             % (key, type(val).__name__))\n\u001b[0m\u001b[1;32m    142\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpairs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Unknown type of parameter:boosting_type, got:dict"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = ltb.LGBMClassifier(params)\n",
+    "model = ltb.LGBMClassifier(boosting_type= 'gbdt',\n",
+    "          objective = 'binary',\n",
+    "          n_jobs = 3,\n",
+    "          silent = True,\n",
+    "          max_depth = params['max_depth'],\n",
+    "          max_bin = params['max_bin'],\n",
+    "          subsample_for_bin = params['subsample_for_bin'],\n",
+    "          subsample = params['subsample'],\n",
+    "          subsample_freq = params['subsample_freq'],\n",
+    "          min_split_gain = params['min_split_gain'],\n",
+    "          min_child_weight = params['min_child_weight'],\n",
+    "          min_child_samples = params['min_child_samples'],\n",
+    "          scale_pos_weight = params['scale_pos_weight'])\n",
+    "\n",
     "model.fit(X_train, y_train)\n",
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-24T18:02:17.835838Z",
+     "start_time": "2020-03-24T18:02:17.822960Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.95      0.96        63\n",
+      "           1       0.96      0.97      0.97        80\n",
+      "\n",
+      "    accuracy                           0.97       143\n",
+      "   macro avg       0.97      0.96      0.96       143\n",
+      "weighted avg       0.97      0.97      0.97       143\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "expected_y  = y_test\n",
+    "predicted_y = model.predict(X_test)\n",
+    "    \n",
+    "# summarize the fit of the model\n",
+    "print(metrics.classification_report(expected_y, predicted_y))"
+   ]
   },
   {
    "cell_type": "code",
@@ -361,6 +402,13 @@
      "library": "var_list.r",
      "varRefreshCmd": "cat(var_dic_list()) "
     }
+   },
+   "position": {
+    "height": "587px",
+    "left": "871px",
+    "right": "20px",
+    "top": "109px",
+    "width": "549px"
    },
    "types_to_exclude": [
     "module",
